welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:1: error: '=' expected but identifier found.
def peindre():=Unit{baisseBrosse();leveBrosse()}
             ^Array2:2: error: illegal start of simple expression
def peindreColonne(T:Array[Color]){
^